Added gulp so we can use Jade and Less

--- a/src/templates/index.jade
+++ b/src/templates/index.jade
@@ -1,1 +1,9 @@
-index.jade
+doctype html
+html
+    head
+        title Gou Date
+        meta(name='viewport', content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, minimal-ui')
+        link(rel='stylesheet', href='media/css/style.css')
+
+    body
+        | hello
