--- a/src/templates/index.jade
+++ b/src/templates/index.jade
@@ -30,3 +30,5 @@ html
                         li.available Delivery available
                     .instructions Please remember to click save after you've made your changes
                 button
+        script(src='media/js/libs.js')
+        script(src='media/js/script.js')
